<!--
 -
 - Certain portions of this software are Copyright (C) 2006-present
 - Vanderbilt University, Institute for Software Integrated Systems.
 -
 - Certain portions of this software are contributed as a public service by
 - The National Institute of Standards and Technology (NIST) and are not
 - subject to U.S. Copyright.
 -
 - Permission is hereby granted, free of charge, to any person obtaining a
 - copy of this software and associated documentation files (the "Software"),
 - to deal in the Software without restriction, including without limitation
 - the rights to use, copy, modify, merge, publish, distribute, sublicense,
 - and/or sell copies of the Software, and to permit persons to whom the
 - Software is furnished to do so, subject to the following conditions:
 -
 - The above Vanderbilt University copyright notice, NIST contribution
 - notice and this permission and disclaimer notice shall be included in all
 - copies or substantial portions of the Software.
 -
 - THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 - IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 - FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
 - THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 - LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 - FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 - DEALINGS IN THE SOFTWARE. THE AUTHORS OR COPYRIGHT HOLDERS SHALL NOT HAVE
 - ANY OBLIGATION TO PROVIDE MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS,
 - OR MODIFICATIONS.
 -
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <maven.test.skip>true</maven.test.skip>
        <org.cpswt.version>0.6.0-SNAPSHOT</org.cpswt.version>
        <portico.version>2.1.0</portico.version>
        <dropwizard.version>1.0.3</dropwizard.version>
        <maven.repository.url>http://cpswtng_archiva:8080/repository</maven.repository.url>
    </properties>

    <groupId>org.cpswt</groupId>
    <artifactId>cpswt-core</artifactId>
    <version>0.6.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>C2WT Java Foundation</name>
    <description>Foundation packages and classes of C2 Windtunnel Java RTI and Federates</description>

    <modules>
        <module>hla-wrapper</module>
        <module>root</module>
        <module>base-events</module>
        <module>utils</module>
        <module>config</module>
        <module>federate-base</module>
        <module>coa</module>
        <module>federation-manager</module>
        <module>fedmanager-exec</module>
        <module>fedmanager-host</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.8.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.8.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.0.0-M1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <failOnError>false</failOnError>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.2</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.5.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.10</version>
            </plugin>

            <!-- Maven assembly plugin to build one fat jar
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.6</version>

                <configuration>
                    <finalName>finalName</finalName>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>org.cpswt.host.FederationManagerHostApplication</mainClass>
                        </manifest>
                    </archive>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            -->

        </plugins>
    </build>

    <repositories>
        <repository>
            <id>archiva.internal</id>
            <name>Internal Release Repository</name>
            <url>http://cpswtng_archiva:8080/repository/internal/</url>
        </repository>
        <repository>
            <id>archiva.snapshots</id>
            <name>Internal Snapshot Repository</name>
            <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>archiva.internal</id>
            <name>Internal Release Repository</name>
            <url>http://cpswtng_archiva:8080/repository/internal/</url>
        </repository>
        <snapshotRepository>
            <id>archiva.snapshots</id>
            <name>Internal Snapshot Repository</name>
            <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <!--<scm>-->
        <!--<connection>scm:git:https://git.vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java</connection>-->
        <!--<developerConnection>scm:git:https://git.vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java-->
        <!--</developerConnection>-->
        <!--<url>https://vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java/folder/master/</url>-->
    <!--</scm>-->

</project>
